fix small visual bug on small resolution

--- a/css/email.css
+++ b/css/email.css
@@ -129,6 +129,8 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 small, h2 small, h3 small, h4 small, h5 small, h6 small {
   font-size: 60%;
+  line-height: 60%;
+  white-space: nowrap;
   color: #6f6f6f;
   line-height: 0;
   text-transform: none; }
